--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ ext {
     ext {
         versions = [
             slf4j              : '1.7.12',
-            hazelcast          : '3.6-SNAPSHOT',
+            hazelcast          : '3.6-EA',
             guava              : '18.0',
             commonsLang        : '3.4',
             commonsCollections : '4.0',
@@ -76,6 +76,7 @@ ext {
             jackson            : '2.6.2',
             junit              : '4.12',
             etcd4j             : '2.7.0',
+            groovy             : '2.4.5',
             sparkFramework     : '2.3'
         ]
     }
