--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,17 @@ allprojects {
                         break
                     case 'org.springframework.boot':
                         if(selection.candidate.version.contains('.M')) {
+                            selection.reject('Release candidate')
+                        }
+                        break
+                    case 'com.fasterxml.jackson.core':
+                        if(selection.candidate.version.contains('-rc')) {
                             selection.reject('Milestone')
+                        }
+                        break
+                    case 'com.fasterxml.jackson.module':
+                        if(selection.candidate.version.contains('-rc')) {
+                            selection.reject('Release candidate')
                         }
                         break
                 }
@@ -66,16 +76,16 @@ ext {
 
     ext {
         versions = [
-            slf4j              : '1.7.12',
-            hazelcast          : '3.6-EA',
+            slf4j              : '1.7.13',
+            hazelcast          : '3.6-EA2',
             guava              : '18.0',
             commonsLang        : '3.4',
-            commonsCollections : '4.0',
+            commonsCollections : '4.1',
             commonsLang        : '3.4',
             commonsCollections : '4.0',
-            jackson            : '2.6.2',
+            jackson            : '2.6.3',
             junit              : '4.12',
-            etcd4j             : '2.7.0',
+            etcd4j             : '2.8.0',
             groovy             : '2.4.5',
             sparkFramework     : '2.3'
         ]
@@ -219,6 +229,14 @@ modifyPom {
             url                 = "${project.gitProject}"
             connection          = "scm:git:${project.gitProject}.git"
             developerConnection = "scm:git:${project.gitProject}.git"
+        }
+
+        developers {
+            developer {
+                id 'lburgazzoli'
+                name 'Luca Burgazzoli'
+                url gitRoot
+            }
         }
     }
 }
