Fixes release build

--- a/build.gradle
+++ b/build.gradle
@@ -202,3 +202,14 @@ modifyPom {
         }
     }
 }
+
+// *****************************************************************************
+//
+// *****************************************************************************
+
+afterReleaseBuild.dependsOn uploadArchives
+//closeAndPromoteRepository.dependsOn uploadArchives
+
+task promote(dependsOn: closeAndPromoteRepository) {
+    println "Release"
+}
