--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,9 @@ ext {
     ext {
         versions = [
             slf4j              : '1.7.13',
-            hazelcast          : '3.6-EA3',
+            hazelcast          : '3.6',
             commonsLang        : '3.4',
-            jackson            : '2.6.4',
+            jackson            : '2.7.0',
             junit              : '4.12',
             etcd4j             : '2.8.0',
             groovy             : '2.4.5',
