--- a/build.gradle
+++ b/build.gradle
@@ -20,27 +20,29 @@ plugins {
     id 'maven'
     id 'idea'
     id 'osgi'
-    id 'com.bmuschko.nexus' version '2.3.1'
-    id 'net.researchgate.release' version '2.3.4'
-    //id 'com.github.ben-manes.versions' version '0.11.3'
-    //id "com.github.nwillc.vplugin" version "1.2.5"
+    id 'signing'
+    id 'net.researchgate.release' version '2.4.1'
 }
 
 apply plugin: 'io.codearte.nexus-staging'
-//apply from: "$rootDir/gradle/dependency-updates.gradle"
 
 // *****************************************************************************
 //
 // *****************************************************************************
 
-group   = 'com.github.lburgazzoli'
+group               = 'com.github.lburgazzoli'
+description         = 'An Etcd based discovery mechanisms for Hazelcast'
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 ext {
     isReleaseVersion = !version.endsWith("SNAPSHOT")
-    isCiBuild        = System.getenv('CI_TRAVIS') != null
+    isCI             = Boolean.valueOf("$System.env.CI")
+    isPR             = "false" != System.env.TRAVIS_PULL_REQUEST 
     gitRoot          = "https://github.com/lburgazzoli"
     gitProject       = "https://github.com/lburgazzoli/hazelcast-discovery-etcd"
-    gitURI           = "git@github.com/lburgazzoli/hazelcast-discovery-etcd.git"
+    gitURL           = "git@github.com/lburgazzoli/hazelcast-discovery-etcd.git"
+    gradleCiTasks    = (isReleaseVersion || isPR) ? ['clean', 'test'] : ['clean', 'test', 'uploadArchives']
 
     ext {
         versions = [
@@ -62,11 +64,13 @@ ext {
         "*"
     ]
 
-    if (isCiBuild && isReleaseVersion) {
-        // This will fail for release versions
-        nexusUsername = ""
-        nexusPassword = ""
-    } else if (!project.hasProperty('nexusUsername') && !project.hasProperty('nexusPassword')) {
+    if (isReleaseVersion) {
+        nexusUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+    } else {
+        nexusUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+    }
+
+    if(!project.hasProperty('nexusUsername') && !project.hasProperty('nexusPassword')) {
         nexusUsername = "$System.env.CI_DEPLOY_USERNAME"
         nexusPassword = "$System.env.CI_DEPLOY_PASSWORD"
     }
@@ -122,8 +126,8 @@ dependencies {
 
 test {
     testLogging {
-        events          'failed'
-        exceptionFormat 'full'
+         events          'started', 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+         exceptionFormat 'full'
     }
 }
 
@@ -157,46 +161,80 @@ jar {
     }
 }
 
-// *************************************************************************
-//
-// *************************************************************************
+// *****************************************************************************
+// ARTIFACTS
+// *****************************************************************************
 
-nexus {
-    sign = project.isReleaseVersion && !project.isCiBuild
+task sourcesJar(type: Jar) {
+    classifier 'sources'
+    from sourceSets.main.allSource
 }
 
-extraArchive {
-    javadoc = true
-    sources = true
-    tests   = false
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier 'javadoc'
+    from javadoc.destinationDir
 }
 
-modifyPom {
-    project {
-        name          = "${project.name}"
-        description   = "${project.name}"
-        url           = "${project.gitProject}"
-        packaging     = 'jar'
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
 
-        licenses {
-            license {
-                name         = "The Apache Software License, Version 2.0"
-                url          = "http://www.apache.org/licenses/LICENSE-2.0.txt"
-                distribution = "repo"
+// *****************************************************************************
+// Publish to Sonatype OSS
+// *****************************************************************************
+
+signing {
+    required {
+        isReleaseVersion
+    }
+
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: project.nexusUrl) {
+                authentication(
+                    userName: project.nexusUsername,
+                    password: project.nexusPassword
+                )
             }
-        }
 
-        scm {
-            url                 = "${project.gitProject}"
-            connection          = "scm:git:${project.gitURI}"
-            developerConnection = "scm:git:${project.gitURI}"
-        }
+            beforeDeployment {
+                MavenDeployment deployment -> signing.signPom(deployment)
+            }
 
-        developers {
-            developer {
-                id 'lburgazzoli'
-                name 'Luca Burgazzoli'
-                url gitRoot
+            pom.groupId = project.group
+            pom.artifactId = project.name
+            pom.version = project.version
+
+            pom.project {
+                name project.name
+                description project.name
+                url project.gitProject
+
+                scm {
+                    url project.gitProject
+                    connection "scm:${project.gitProject}"
+                    developerConnection "scm:${project.gitURL}"
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'lburgazzoli'
+                        name 'Luca Burgazzoli'
+                    }
+                }
             }
         }
     }
@@ -207,8 +245,9 @@ modifyPom {
 // *****************************************************************************
 
 afterReleaseBuild.dependsOn uploadArchives
-//closeAndPromoteRepository.dependsOn uploadArchives
 
-task promote(dependsOn: closeAndPromoteRepository) {
-    println "Release"
+task close(dependsOn: 'closeAndPromoteRepository') {
+}
+
+task ci(dependsOn: project.gradleCiTasks) {
 }
