--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
       - image: quay.io/coreos/etcd:v3.2.2
-        command: [ etcd, -name, etcd4j, -advertise-client-urls, "http://127.0.0.1:2379,http://127.0.0.1:4001", -listen-client-urls, "http://0.0.0.0:2379,,http://0.0.0.0:4001" ]
+        command: [ etcd, -name, etcd4j, -advertise-client-urls, "http://127.0.0.1:2379,http://127.0.0.1:4001", -listen-client-urls, "http://0.0.0.0:2379,http://0.0.0.0:4001" ]
     steps:
       - checkout
       - run: ./gradlew ci      
